--- a/plugins/generators/multigridpattern/wdgmultigridpatternoptions.ui
+++ b/plugins/generators/multigridpattern/wdgmultigridpatternoptions.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>282</width>
-    <height>227</height>
+    <width>323</width>
+    <height>440</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="4" rowspan="2">
+   <item row="0" column="1">
     <spacer>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -27,40 +27,25 @@
      </property>
     </spacer>
    </item>
-   <item row="0" column="0" rowspan="2" colspan="2">
-    <widget class="QLabel" name="lblColor">
-     <property name="text">
-      <string>&amp;Color 1:</string>
+   <item row="0" column="0">
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="title">
+      <string>Shapes</string>
      </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-     <property name="buddy">
-      <cstring>bnColor1</cstring>
-     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="KisSliderSpinBox" name="sldDimensions" native="true"/>
+      </item>
+      <item>
+       <widget class="KisSliderSpinBox" name="sldDivisions" native="true"/>
+      </item>
+      <item>
+       <widget class="KisDoubleSliderSpinBox" name="sldOffset" native="true"/>
+      </item>
+     </layout>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QLabel" name="lblDivisions">
-     <property name="text">
-      <string>Divisions:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QLabel" name="lblColor2">
-     <property name="text">
-      <string>&amp;Color 2:</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-     <property name="buddy">
-      <cstring>bnColor1</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="3">
+   <item row="3" column="0">
     <spacer>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -76,52 +61,104 @@
      </property>
     </spacer>
    </item>
-   <item row="5" column="3">
-    <widget class="QDoubleSpinBox" name="spnOffset">
-     <property name="minimum">
-      <double>0.010000000000000</double>
+   <item row="2" column="0">
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
+      <string>Colors</string>
      </property>
-     <property name="maximum">
-      <double>0.990000000000000</double>
-     </property>
-     <property name="singleStep">
-      <double>0.100000000000000</double>
-     </property>
+     <layout class="QFormLayout" name="formLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="lblColor">
+        <property name="text">
+         <string>&amp;Color 1:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+        <property name="buddy">
+         <cstring>bnColor1</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="KisColorButton" name="bnColor1"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="lblColor2">
+        <property name="text">
+         <string>&amp;Color 2:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+        <property name="buddy">
+         <cstring>bnColor1</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="KisColorButton" name="bnColor2"/>
+      </item>
+      <item row="2" column="0" colspan="2">
+       <widget class="KisDoubleSliderSpinBox" name="sldColorRatio" native="true"/>
+      </item>
+      <item row="3" column="0" colspan="2">
+       <widget class="KisDoubleSliderSpinBox" name="sldColorIntersect" native="true"/>
+      </item>
+      <item row="4" column="0" colspan="2">
+       <widget class="KisDoubleSliderSpinBox" name="sldColorIndex" native="true"/>
+      </item>
+     </layout>
     </widget>
    </item>
-   <item row="2" column="3">
-    <widget class="KisColorButton" name="bnColor2"/>
-   </item>
-   <item row="3" column="3">
-    <widget class="QSpinBox" name="spnDivisions"/>
-   </item>
-   <item row="0" column="3" rowspan="2">
-    <widget class="KisColorButton" name="bnColor1"/>
-   </item>
-   <item row="4" column="3">
-    <widget class="QSpinBox" name="spnDimensions"/>
-   </item>
-   <item row="4" column="1">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Dimensions</string>
+   <item row="1" column="0">
+    <widget class="QGroupBox" name="groupBox_3">
+     <property name="title">
+      <string>Lines</string>
      </property>
-    </widget>
-   </item>
-   <item row="5" column="1">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Offset</string>
-     </property>
+     <layout class="QFormLayout" name="formLayout_3">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Line Color: </string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="KisColorButton" name="bnLineColor"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Line Width:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QSpinBox" name="spnLineWidth"/>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
+   <class>KisDoubleSliderSpinBox</class>
+   <extends>QWidget</extends>
+   <header>kis_slider_spin_box.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
    <class>KisColorButton</class>
    <extends>QPushButton</extends>
    <header>kis_color_button.h</header>
+  </customwidget>
+  <customwidget>
+   <class>KisSliderSpinBox</class>
+   <extends>QWidget</extends>
+   <header location="global">kis_slider_spin_box.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
