RGBA brushtips as gradient maps
This adds the option to use a RGBA brushtips as gradient
maps. This allows not only multi-colored brushes, but much
more flexibility with stamp brushes.

The patch implements the follwoing:

1) Fixes issues with loading PNG brushes that are grayscale
   but have an alpha channel and should be loaded as RGBA brushes.
   Originally, if it saw it was grayscale, it would get rid of
   the alpha channel, but that means they can't be used with the
   new lightness and gradient modes.  This checks if the image
   uses alpha anywhere in the image, and sets it as an RGBA image
   if it does.

2) Fixes a bug in KoCachedGradient where changing the
   stored gradient added colors to the end of the colorlist
   instead of clearing the original colors and replacing them.

3) Adds the ability to change the colorspace of the cached
   colors in KoCachedGradient.

NOTE: all the commit of the original branch has been squashed
      because it was impossible to rebase the work. And without
      rebase we wouldn't be able to port the code to master.

--- a/plugins/paintops/libpaintop/forms/wdgpredefinedbrushchooser.ui
+++ b/plugins/paintops/libpaintop/forms/wdgpredefinedbrushchooser.ui
@@ -225,21 +225,28 @@
           <item>
            <widget class="QRadioButton" name="btnMaskMode">
             <property name="text">
-             <string>Mask</string>
+             <string>Alpha Mask</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QRadioButton" name="btnColorMode">
             <property name="text">
-             <string>Color</string>
+             <string>Color Image</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="btnGradientMode">
+            <property name="text">
+             <string>Gradient Map</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QRadioButton" name="btnLightnessMode">
             <property name="text">
-             <string>Lightness</string>
+             <string>Lightness Map</string>
             </property>
            </widget>
           </item>
