Put the comment string in the right place
(cherry picked from commit 4382191bea55c9d7fd9429ddbdb416a85f758a57)

--- a/plugins/tools/tool_transform2/wdg_tool_transform.ui
+++ b/plugins/tools/tool_transform2/wdg_tool_transform.ui
@@ -1701,7 +1701,7 @@
          <item>
           <widget class="QLabel" name="previewGranularity">
            <property name="text">
-            <string>Preview</string>
+            <string comment="The Granularity value for Preview">Preview</string>
            </property>
           </widget>
          </item>
