Change file names according to convention
Ref T12819

--- a/plugins/dockers/storyboarddocker/wdgstoryboarddock.ui
+++ b/plugins/dockers/storyboarddocker/wdgstoryboarddock.ui
@@ -103,7 +103,7 @@
   <customwidget>
    <class>StoryboardView</class>
    <extends>QListView</extends>
-   <header>storyboardView.h</header>
+   <header>StoryboardView.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
