Change label of Defor&m Layer to Defor&amp;m Selection because it does not deform the layer itself, only the area inside the cage.

--- a/plugins/tools/tool_transform2/wdg_tool_transform.ui
+++ b/plugins/tools/tool_transform2/wdg_tool_transform.ui
@@ -1660,7 +1660,7 @@
           <bool>true</bool>
          </property>
          <property name="text">
-          <string>Defor&amp;m Layer</string>
+          <string>Defor&amp;m Selection</string>
          </property>
          <attribute name="buttonGroup">
           <string notr="true">cageTransformButtonGroup</string>
