Change label Line Selection to Solid line, Paint color to Line color.

--- a/libs/ui/forms/wdgstrokeselectionproperties.ui
+++ b/libs/ui/forms/wdgstrokeselectionproperties.ui
@@ -61,7 +61,7 @@
          </item>
          <item>
           <property name="text">
-           <string>Line selection</string>
+           <string>Solid line</string>
           </property>
          </item>
         </widget>
@@ -202,7 +202,7 @@
          </item>
          <item>
           <property name="text">
-           <string>Paint color</string>
+           <string>Line color</string>
           </property>
          </item>
          <item>
