Disambiguate label of the option to not DRAW an outline in Geometry Options.

--- a/libs/ui/forms/wdggeometryoptions.ui
+++ b/libs/ui/forms/wdggeometryoptions.ui
@@ -89,7 +89,7 @@
      </property>
      <item>
       <property name="text">
-       <string>No Outline</string>
+       <string comment="Label of the option to not draw outline in Geometry Options">No Outline</string>
       </property>
      </item>
      <item>
