--- a/libs/ui/layerstyles/wdglayerstyles.ui
+++ b/libs/ui/layerstyles/wdglayerstyles.ui
@@ -131,7 +131,7 @@
        </item>
        <item>
         <property name="text">
-         <string>Stroke</string>
+         <string comment="Layer Style - Stroke">Stroke</string>
         </property>
         <property name="checkState">
          <enum>Unchecked</enum>
