--- a/libs/ui/layerstyles/WdgStroke.ui
+++ b/libs/ui/layerstyles/WdgStroke.ui
@@ -244,7 +244,7 @@
                  </item>
                  <item>
                   <property name="text">
-                   <string>Diamond</string>
+                   <string comment="Gradient type - Diamond">Diamond</string>
                   </property>
                  </item>
                 </widget>
