--- a/libs/ui/layerstyles/WdgGradientOverlay.ui
+++ b/libs/ui/layerstyles/WdgGradientOverlay.ui
@@ -131,7 +131,7 @@
              </property>
              <item>
               <property name="text">
-               <string>Linear</string>
+               <string comment="Gradient type - Linear">Linear</string>
               </property>
              </item>
              <item>
