--- a/libs/ui/layerstyles/WdgStroke.ui
+++ b/libs/ui/layerstyles/WdgStroke.ui
@@ -224,7 +224,7 @@
                  </property>
                  <item>
                   <property name="text">
-                   <string>Linear</string>
+                   <string comment="Gradient type - Linear">Linear</string>
                   </property>
                  </item>
                  <item>
