--- a/libs/ui/widgets/KoFillConfigWidget.ui
+++ b/libs/ui/widgets/KoFillConfigWidget.ui
@@ -222,7 +222,7 @@
        </property>
        <item>
         <property name="text">
-         <string>Linear</string>
+         <string comment="Gradient type - Linear">Linear</string>
         </property>
        </item>
        <item>
