--- a/plugins/generators/multigridpattern/wdgmultigridpatternoptions.ui
+++ b/plugins/generators/multigridpattern/wdgmultigridpatternoptions.ui
@@ -32,7 +32,7 @@
    <item>
     <widget class="QGroupBox" name="gbLines">
      <property name="title">
-      <string>Lines</string>
+      <string comment="Line label in Multigrid pattern options">Lines</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
