--- a/plugins/generators/multigridpattern/wdgmultigridpatternoptions.ui
+++ b/plugins/generators/multigridpattern/wdgmultigridpatternoptions.ui
@@ -76,19 +76,15 @@
           <item row="0" column="1">
            <widget class="QComboBox" name="cmbConnectorType"/>
           </item>
-          <item row="1" column="0" colspan="2">
-           <layout class="QHBoxLayout" name="horizontalLayout_3">
-            <item>
-             <widget class="QLabel" name="label">
-              <property name="text">
-               <string>Width:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QSpinBox" name="spnConnectorWidth"/>
-            </item>
-           </layout>
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="spnConnectorWidth"/>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>Width:</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
